--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Primeiro Site</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Meu Portifólio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+ 
 </head>
 <body>
 
     <header>
-        <h1>Bem-vindo ao Meu Site de novo!</h1>
+        <h1 class=" w3-center w3-black  w3-margin w3-padding w3-roundlarge">Bem-vindo ao Meu Portifólio</h1>
     </header>
 
     <main>
-        <p>Este é um site de exemplo para você praticar e hospedar no GitHub Pages. Sinta-se à vontade para editar o conteúdo.</p>
+        <p>Esta é uma breve apresentação dos conteúdos
+            que já criei em Desenvolvimento de Sistemas. 
+            Sinta-se à vontade para explorar todo o conteúdo.</p>
         <button id="meuBotao">Clique em mim</button>
     </main>
 
