--- a/carteira.html
+++ b/carteira.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carteira de Investimentos - 10 Anos</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="carteira-script.js" defer></script> 
+    <link rel="stylesheet" href="/projeto/style.css">
+<script src="/projeto/carteira-script.js"></script>
+
 </head>
 <body>
 
