--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/projeto/style.css">
-<script src="/projeto/carteira-script.js"></script>
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bem-vindo ao Meu Site!</title>
+  <link rel="stylesheet" href="./style.css" />
+  <script src="./script.js"></script>
 </head>
 <body>
+  <header>
+    <h1>Bem-vindo ao Meu Site!</h1>
+  </header>
 
-    <header>
-        <h1>Bem-vindo ao Meu Site!</h1>
-    </header>
+  <main>
+    <p>
+      Este é um site de exemplo para você praticar e hospedar no GitHub Pages.
+      Sinta-se à vontade para editar o conteúdo.
+    </p>
+    <button id="meuBotao">Clique em mim</button>
 
-    <main>
-        <p>Este é um site de exemplo para você praticar e hospedar no GitHub Pages. Sinta-se à vontade para editar o conteúdo.</p>
-        <button id="meuBotao">Clique em mim</button>
-        
-        <h2><a href="carteira.html">Carteira de Investimentos - Tipo: 10 Anos</a></h2>
-    </main>
+    <h2>
+      <a href="./carteira.html">Carteira de Investimentos - Tipo: 10 Anos</a>
+    </h2>
+  </main>
 
-    <footer>
-        <p>Desenvolvido com ❤️ para o GitHub.</p>
-    </footer>
-
-    <script src="script.js"></script>
-
+  <footer>
+    <p>Desenvolvido com ❤️ para o GitHub.</p>
+  </footer>
 </body>
 </html>
