Melhorias em geralt

--- a/10anos.html
+++ b/10anos.html
@@ -59,7 +59,7 @@
 </div>
 
         <div class="botao-container">
-          <button ...>📊 Ver Gráfico</button>
+          <button onclick="window.location.href='grafico.html'" class="btn-filtro">📊 Ver Gráfico</button>
           <button onclick="limparPlanilha()" class="btn-limpar">
           🧹 Limpar Planilha Carregada
           </button>
