Nova versão do site

--- a/10anos.html
+++ b/10anos.html
@@ -1,6 +1,10 @@
+<!-- 10anos.html -->
+
 <!DOCTYPE html>
+
 <html lang="pt-br">
 <head>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Carteira - 10 Anos</title>
@@ -8,7 +12,11 @@
   <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
   <script src="./carteira-script.js" defer></script>
 </head>
+
 <body>
+  
+  <div id="resumo-mercado"></div> <br>
+
   <header>
     <h1>Carteira de Investimentos - 10 Anos</h1>
     <p>
@@ -17,6 +25,8 @@
       </button>
     </p>
 
+    <h2> Veja o exemplo abaixo, o formato que a planilha tem que ter</h2>
+    <img src="./exemplo.png" alt="Exemplo de formato da planilha" style="max-width: 100%; height: auto; margin-top: 10px;"/>
 
   </header>
 
@@ -64,9 +74,6 @@
           🧹 Limpar Planilha Carregada
           </button>
 </div>
-
-
-
 
       </div>
     </section>
