--- a/10anos.html
+++ b/10anos.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./style.css" />
   <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
   <script src="./carteira-script.js" defer></script>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
